--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 form {
     padding: 3rem 5rem;
     margin: 0 auto;
-    width: 35%;
+    width: 40%;
 
     display: flex;
     flex-direction: column;
@@ -66,5 +66,34 @@ div[class*='option'] label, div[class*='option'] input {
     text-align: left;
 }
 
+footer {
+    border-top: 1px solid #000;
+    text-align: center;
+}
+
+footer p {
+    padding: .8rem;
+}
 
 
+@media screen and (max-width: 1400px) {
+    form {
+        padding: 3rem 5rem;
+        margin: 0 auto;
+        width: 80%;
+    
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    form {
+        padding: 3rem 5rem;
+        margin: 0 auto;
+        width: 95%;
+    
+        display: flex;
+        flex-direction: column;
+    }
+}
