--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,16 @@ form {
     margin: 0 auto;
 }
 
+h3 {
+    font-size: 2.5rem;
+}
+
 button {
     font-size: 1.5rem;
     padding: .5rem 1rem;
 }
 
-label, input {
+input {
     display: block;
 }
 
