--- a/css/styles.css
+++ b/css/styles.css
@@ -20,49 +20,69 @@ form {
 
 h3 {
     font-size: 2.5rem;
+    font-weight: bold;
+}
+
+h4 {
+    margin-top: 3rem;
+}
+
+.form-section {
+    margin: 2rem 0;
+    /* border: 1px solid black; */
+}
+
+.section-header {
+    position: relative;
+    right: 4rem;
+}
+
+span.required {
+    color: red;
 }
 
 button {
+    background-color: #F38181;
+    border: none;
+    border-radius: .5rem;
+    color: #fff;
     font-size: 1.5rem;
+    width: 60%;
     padding: .5rem 1rem;
 }
 
-input {
-    display: block;
+.text-label {
+    background-color: #fff;
+    font-size: 1.1rem;
+    position: relative;
+    padding: .3rem;
+    top: 1.1rem;
+    left: .8rem;
 }
 
-input {
+.radio-label, .checkbox-label {
+    font-size: 1.3rem;
+}
+
+input[type='radio'], input[type='checkbox'] {
+    margin-right: 1.3rem;
+    background-color: #F38181;
+}
+
+input[class='other'], .text-input {
+    color: #F38181;
     font-size: 1.5rem;
-    border: none;
+    border: 1px solid #F38181;
+    border-radius: .25rem;
+    padding: .4rem 1.3rem;
+}
+
+.text-input {
     width: 100%;
-    padding-bottom: .5rem;
-    border-bottom: thin solid grey;
 }
 
 textarea:focus, input:focus{
     outline: none;
-}
-
-.customer-info {
-    display: flex;
-    flex-direction: column;
-}
-
-.form-card {
-    border: 1px solid rgb(199, 199, 199);
-    border-radius: .5rem;
-    margin: 1.2rem 0;
-    padding: 2rem;
-}
-
-.form-card input {
-    margin-top: 3rem;
-}
-
-div[class*='option'] label, div[class*='option'] input {
-    width: auto;
-    display: inline;
-    text-align: left;
 }
 
 footer {
@@ -75,24 +95,4 @@ footer p {
 }
 
 
-/* @media screen and (max-width: 1250px) {
-    form {
-        padding: 3rem 5rem;
-        margin: 0 auto;
-        width: 60%;
-    
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    form {
-        padding: 3rem 5rem;
-        margin: 0 auto;
-        width: 95%;
-    
-        display: flex;
-        flex-direction: column;
-    }
-} */
+/* #FFC5C5 */
